improved and restored JavaSerializer.assertReadResolve and added note on required JVM args