@@ -3,6 +3,7 @@ package org.jbali.serialize
 import org.jbali.reflect.Proxies
 
 import java.io.*
+import java.lang.reflect.InaccessibleObjectException
 import java.lang.reflect.Method
 
 object JavaSerializer {
@@ -54,10 +55,17 @@ object JavaSerializer {
         }
     }
 
-//    private val ObjectStreamClass_hasReadResolveMethod: Method =
-//            ObjectStreamClass::class.java.getDeclaredMethod("hasReadResolveMethod")
-//                .apply { isAccessible = true }
-
+    private fun oscMethod(method: String): Lazy<Method> = lazy {
+        try {
+            ObjectStreamClass::class.java.getDeclaredMethod(method)
+                .apply { isAccessible = true }
+        } catch (e: InaccessibleObjectException) {
+            throw IllegalStateException("This assertion requires JVM arguments: --add-opens java.base/java.io=ALL-UNNAMED", e)
+        }
+    }
+    private val ObjectStreamClass_hasReadResolveMethod  by oscMethod("hasReadResolveMethod" )
+    private val ObjectStreamClass_hasWriteReplaceMethod by oscMethod("hasWriteReplaceMethod")
+    
     /**
      * Assert that the given class has a correct `readResolve` method for Java serialization.
      *
@@ -70,31 +78,27 @@ object JavaSerializer {
      * - omit declaring [ObjectStreamException]
      * - make the return type `@NotNull Object`, or [Any] in Kotlin
      *
+     * This implementation delegates to a private method of [ObjectStreamClass],
+     * and requires JVM arguments `--add-opens java.base/java.io=ALL-UNNAMED`.
+     *
      * [https://docs.oracle.com/javase/7/docs/platform/serialization/spec/input.html#5903]
      */
     // TODO implement this check as an annotation processor - update: actually just use @Serial
     fun assertReadResolve(clazz: Class<*>): ObjectStreamClass {
         val osc = ObjectStreamClass.lookup(clazz)
-        // TODO fix for java 17 or remove
-//        val hasReRe = ObjectStreamClass_hasReadResolveMethod.invoke(osc) as Boolean
-//        if (!hasReRe) {
-//            throw AssertionError("$clazz does not have a conformant readResolve method. See assertReadResolve method doc for requirements.")
-//        }
+        val hasReRe = ObjectStreamClass_hasReadResolveMethod.invoke(osc) as Boolean
+        if (!hasReRe) {
+            throw AssertionError("$clazz does not have a conformant readResolve method. See assertReadResolve method doc for requirements.")
+        }
         return osc
     }
 
-
-//    private val ObjectStreamClass_hasWriteReplaceMethod: Method =
-//            ObjectStreamClass::class.java.getDeclaredMethod("hasWriteReplaceMethod")
-//                    .apply { isAccessible = true }
-
     fun assertWriteReplace(clazz: Class<*>): ObjectStreamClass {
         val osc = ObjectStreamClass.lookup(clazz)
-        // TODO fix for java 17 or remove
-//        val hasReRe = ObjectStreamClass_hasWriteReplaceMethod.invoke(osc) as Boolean
-//        if (!hasReRe) {
-//            throw AssertionError("$clazz does not have a conformant writeReplace method")
-//        }
+        val hasReRe = ObjectStreamClass_hasWriteReplaceMethod.invoke(osc) as Boolean
+        if (!hasReRe) {
+            throw AssertionError("$clazz does not have a conformant writeReplace method")
+        }
         return osc
     }
 
